--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ letter-spacing: 0.02em;
 color: #2e2f42;
 }
 
-.benefits-text {
+.benefits-description {
 font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
