add section team

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 background-color: #4d5ae5;
 color: #fff;
+cursor: pointer;
 }
 
 .button-title:hover,
@@ -95,5 +96,36 @@ font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+color: #434455;
+}
+
+.team-page {
+  background: #f4f4fd;
+}
+
+.taem-page-title {
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+}
+
+.team-title {
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+}
+
+.team-description {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
 color: #434455;
 }
