--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,6 @@ color: #2e2f42;
 }
 
 .benefits-description {
-font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -122,10 +121,43 @@ color: #2e2f42;
 }
 
 .team-description {
-font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
 color: #434455;
+}
+
+.portfolio-page-title {
+  background-color: #fff;
+}
+
+.section-one-item {
+background-color: #fff;
+}
+
+.portfolio-title {
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+
+.portfolio-text {
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
+
+.page-footer {
+  background-color: #2e2f42;
+}
+
+.footer-text {
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
 }
