--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
-  font-family: `Roboto` sans-serif;
-  color: #434455
-  background-color: #fff
+  font-family: `Roboto` , sans-serif;
+  color: #434455;
+  background-color: #fff;
 }
 
 ul, ol {
@@ -101,7 +101,8 @@ color: #434455;
 }
 
 .team-page {
-  background: #f4f4fd;
+  text-transform: capitalize;
+  background-color: #f4f4fd;
 }
 
 .taem-page-title {
