--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,7 @@ text-align: center;
 color: #434455;
 }
 
-.portfolio-page-title {
+.portfolio-page {
   background-color: #fff;
 }
 
@@ -140,7 +140,7 @@ color: #434455;
 background-color: #fff;
 }
 
-.portfolio-title {
+.portfolio-page-title {
 font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
