--- a/css/styles.css
+++ b/css/styles.css
@@ -136,15 +136,13 @@ color: #434455;
   background-color: #fff;
 }
 
-.section-one-item {
-background-color: #fff;
-}
-
 .portfolio-page-title {
 font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
 letter-spacing: 0.02em;
+text-transform: capitalize;
 color: #2e2f42;
 }
 
