add final portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,10 @@ text-align: center;
 color: #2e2f42;
 }
 
+.team-item {
+background-color: #FFFFFF
+}
+
 .team-title {
 font-weight: 500;
 font-size: 20px;
